--- a/bank-automat/mainwindow.ui
+++ b/bank-automat/mainwindow.ui
@@ -37,8 +37,8 @@
      <rect>
       <x>380</x>
       <y>330</y>
-      <width>591</width>
-      <height>171</height>
+      <width>610</width>
+      <height>310</height>
      </rect>
     </property>
     <layout class="QFormLayout" name="formLayout">
@@ -47,6 +47,44 @@
      </item>
      <item row="0" column="1">
       <widget class="QPushButton" name="kirjauduNappi">
+       <property name="minimumSize">
+        <size>
+         <width>600</width>
+         <height>300</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>600</width>
+         <height>300</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <family>Ubuntu</family>
+         <pointsize>48</pointsize>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QPushButton{
+	border-image: url(:/buttontausta.png);
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}
+QPushButton:pressed{
+	border-image: url(:/buttonpainettu.png);
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}</string>
+       </property>
        <property name="text">
         <string>Kirjaudu sisään</string>
        </property>
