--- a/bank-automat/kirjaudusisaan.ui
+++ b/bank-automat/kirjaudusisaan.ui
@@ -51,7 +51,7 @@
       </property>
       <property name="styleSheet">
        <string notr="true">QLabel{
-	border-image: url(:/buttontausta.png);
+	border-image: url(:/tekstitausta.png);
 	background-color: transparent;
 	color: rgb(255, 255, 255);
 	background: none;
@@ -91,12 +91,14 @@
        <enum>Qt::RightToLeft</enum>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(255, 255, 255);
-alternate-background-color: rgb(255, 255, 255);
-border-color: rgb(255, 255, 255);</string>
+       <string notr="true">QLineEdit {
+    background-color: white;
+    border: 2px solid green;
+    border-radius: 5px;
+}</string>
       </property>
       <property name="maxLength">
-       <number>7</number>
+       <number>4</number>
       </property>
       <property name="echoMode">
        <enum>QLineEdit::Password</enum>
@@ -135,11 +137,14 @@ border-color: rgb(255, 255, 255);</string>
        <enum>Qt::RightToLeft</enum>
       </property>
       <property name="styleSheet">
-       <string notr="true">font: 14pt &quot;Ubuntu&quot;;
-background-color: rgb(255, 255, 255);</string>
+       <string notr="true">QLineEdit {
+    background-color: white;
+    border: 2px solid green;
+    border-radius: 5px;
+}</string>
       </property>
       <property name="maxLength">
-       <number>19</number>
+       <number>16</number>
       </property>
       <property name="alignment">
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -171,7 +176,7 @@ background-color: rgb(255, 255, 255);</string>
       </property>
       <property name="styleSheet">
        <string notr="true">QLabel{
-	border-image: url(:/buttontausta.png);
+	border-image: url(:/tekstitausta.png);
 	background-color: transparent;
 	color: rgb(255, 255, 255);
 	background: none;
@@ -551,6 +556,12 @@ background-repeat: none;</string>
            <bold>false</bold>
           </font>
          </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border-image: url(:/nappipainamaton.png);
@@ -595,6 +606,12 @@ QPushButton:pressed{
            <family>Ubuntu</family>
            <pointsize>20</pointsize>
           </font>
+         </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
          </property>
          <property name="styleSheet">
           <string notr="true">QPushButton{
@@ -641,6 +658,12 @@ QPushButton:pressed{
            <pointsize>20</pointsize>
           </font>
          </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border-image: url(:/nappipainamaton.png);
@@ -685,6 +708,12 @@ QPushButton:pressed{
            <family>Ubuntu</family>
            <pointsize>20</pointsize>
           </font>
+         </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
          </property>
          <property name="styleSheet">
           <string notr="true">QPushButton{
@@ -733,6 +762,12 @@ QPushButton:pressed{
            <bold>false</bold>
           </font>
          </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border-image: url(:/nappipainamaton.png);
@@ -777,6 +812,12 @@ QPushButton:pressed{
            <family>Ubuntu</family>
            <pointsize>20</pointsize>
           </font>
+         </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
          </property>
          <property name="styleSheet">
           <string notr="true">QPushButton{
@@ -824,6 +865,12 @@ QPushButton:pressed{
            <pointsize>20</pointsize>
           </font>
          </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border-image: url(:/nappipainamaton.png);
@@ -869,6 +916,12 @@ QPushButton:pressed{
            <pointsize>20</pointsize>
           </font>
          </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
          <property name="styleSheet">
           <string notr="true">QPushButton{
 	border-image: url(:/nappipainamaton.png);
@@ -894,6 +947,57 @@ QPushButton:pressed{
          </property>
         </widget>
        </item>
+       <item row="2" column="2">
+        <widget class="QPushButton" name="N9">
+         <property name="minimumSize">
+          <size>
+           <width>130</width>
+           <height>60</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>130</width>
+           <height>60</height>
+          </size>
+         </property>
+         <property name="font">
+          <font>
+           <family>Ubuntu</family>
+           <pointsize>20</pointsize>
+          </font>
+         </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{
+	border-image: url(:/nappipainamaton.png);
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}
+QPushButton:pressed{
+	border-image: url(:/nappipainettu.png);
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}</string>
+         </property>
+         <property name="text">
+          <string>9</string>
+         </property>
+        </widget>
+       </item>
        <item row="2" column="0">
         <widget class="QPushButton" name="N7">
          <property name="minimumSize">
@@ -913,6 +1017,12 @@ QPushButton:pressed{
            <family>Ubuntu</family>
            <pointsize>20</pointsize>
           </font>
+         </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
          </property>
          <property name="styleSheet">
           <string notr="true">QPushButton{
@@ -939,8 +1049,8 @@ QPushButton:pressed{
          </property>
         </widget>
        </item>
-       <item row="2" column="2">
-        <widget class="QPushButton" name="N9">
+       <item row="3" column="0">
+        <widget class="QPushButton" name="pyyhiNappi">
          <property name="minimumSize">
           <size>
            <width>130</width>
@@ -958,6 +1068,12 @@ QPushButton:pressed{
            <family>Ubuntu</family>
            <pointsize>20</pointsize>
           </font>
+         </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
          </property>
          <property name="styleSheet">
           <string notr="true">QPushButton{
@@ -980,7 +1096,58 @@ QPushButton:pressed{
 }</string>
          </property>
          <property name="text">
-          <string>9</string>
+          <string>&lt;-</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="2">
+        <widget class="QPushButton" name="tyhjennaNappi">
+         <property name="minimumSize">
+          <size>
+           <width>130</width>
+           <height>60</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>130</width>
+           <height>60</height>
+          </size>
+         </property>
+         <property name="font">
+          <font>
+           <family>Ubuntu</family>
+           <pointsize>20</pointsize>
+          </font>
+         </property>
+         <property name="cursor">
+          <cursorShape>PointingHandCursor</cursorShape>
+         </property>
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton{
+	border-image: url(:/nappipainamaton.png);
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}
+QPushButton:pressed{
+	border-image: url(:/nappipainettu.png);
+	background-color: transparent;
+	color: rgb(255, 255, 255);
+	background: none;
+	border: none;
+	background-repeat: none;
+	selection-color: rgb(0, 0, 0);
+}</string>
+         </property>
+         <property name="text">
+          <string>C</string>
          </property>
         </widget>
        </item>
