--- a/bank-automat/saldo.ui
+++ b/bank-automat/saldo.ui
@@ -90,7 +90,7 @@ QPushButton:pressed{
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>1150</x>
+     <x>490</x>
      <y>20</y>
      <width>281</width>
      <height>41</height>
@@ -128,6 +128,21 @@ background-repeat: none;</string>
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="kayttajaNimi">
+   <property name="geometry">
+    <rect>
+     <x>770</x>
+     <y>20</y>
+     <width>221</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>16</pointsize>
+    </font>
    </property>
   </widget>
  </widget>
